# ChangeLog for dev-perl/Module-Locate
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Locate/ChangeLog,v 1.1 2011/04/21 10:25:33 tove Exp $

  21 Apr 2011; Torsten Veller <tove@gentoo.org> +Module-Locate-1.700.0.ebuild,
  +metadata.xml:
  Import from perl-experimental (#358337)

*Module-Locate-1.700.0 (03 Apr 2011)

  03 Apr 2011; Kent Fredric <kentfredric@gmail.com>
  +Module-Locate-1.700.0.ebuild, +metadata.xml:
  Added for Perl::Tags
