@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Locate/Module-Locate-1.700.0.ebuild,v 1.1 2011/04/21 10:25:33 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Locate/Module-Locate-1.700.0.ebuild,v 1.2 2011/05/19 19:18:56 grobian Exp $
 
 EAPI=4
 
@@ -11,7 +11,7 @@ inherit perl-module
 DESCRIPTION="Locate modules in the same fashion as require and use"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
 IUSE=""
 
 SRC_TEST="do"
