@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Perl-Tags
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Tags/ChangeLog,v 1.1 2011/04/21 10:26:29 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Tags/ChangeLog,v 1.2 2011/05/19 19:20:44 grobian Exp $
+
+  19 May 2011; Fabian Groffen <grobian@gentoo.org> Perl-Tags-0.280.0.ebuild:
+  Added Prefix keywords, bug #367981
 
   21 Apr 2011; Torsten Veller <tove@gentoo.org> +Perl-Tags-0.280.0.ebuild,
   +metadata.xml:
