@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Module-Locate
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Locate/ChangeLog,v 1.1 2011/04/21 10:25:33 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Module-Locate/ChangeLog,v 1.2 2011/05/19 19:18:56 grobian Exp $
+
+  19 May 2011; Fabian Groffen <grobian@gentoo.org>
+  Module-Locate-1.700.0.ebuild:
+  Added Prefix keywords, bug #367981
 
   21 Apr 2011; Torsten Veller <tove@gentoo.org> +Module-Locate-1.700.0.ebuild,
   +metadata.xml:
